# ChangeLog for x11-libs/pixman
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/pixman/ChangeLog,v 1.84 2010/12/31 20:14:40 jer Exp $

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> pixman-0.20.0.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> pixman-0.20.0.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org> pixman-0.20.0.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> pixman-0.20.0.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> pixman-0.20.0.ebuild:
  ppc64 stable wrt #344827

  20 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> -pixman-0.18.4.ebuild:
  old

*pixman-0.20.0 (28 Oct 2010)

  28 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +pixman-0.20.0.ebuild:
  Version bump.

  21 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -pixman-0.17.2.ebuild, -files/pixman-0.17.2-armv7.patch:
  old

  21 Oct 2010; Brent Baude <ranger@gentoo.org> pixman-0.18.2.ebuild:
  Marking pixman-0.18.2 ppc stable for bug 239063

  28 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> pixman-0.18.2.ebuild:
  ppc64 stable wrt #327777

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> pixman-0.18.2.ebuild:
  ia64/s390/sh/sparc stable wrt #327777

  12 Sep 2010; Tobias Klausmann <klausman@gentoo.org> pixman-0.18.2.ebuild:
  Stable on alpha, bug #327777

*pixman-0.18.4 (17 Aug 2010)

  17 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +pixman-0.18.4.ebuild:
  Version bump.

  22 Jul 2010; Markus Meier <maekke@gentoo.org> pixman-0.18.2.ebuild:
  arm stable, bug #327777

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org> pixman-0.18.2.ebuild:
  Stable for HPPA (bug #327777).

  13 Jul 2010; Christian Faulhammer <fauli@gentoo.org> pixman-0.18.2.ebuild:
  x86 stable, bug 327777

  12 Jul 2010; Markos Chandras <hwoarang@gentoo.org> pixman-0.18.2.ebuild: